# browserNerd

./: .gitignore  LICENSE  NOTICE  README.md  gemini_backuptest.md
docs/: PRD.md  rodcontext7.md
docs/mangle-programming-references/: Agents.md  SKILL.md  gemini_backuptest.md  mangleContext7Docs.md
eval/: README.md  cli.py  config.py  conversation.py  harness.py  judge.py  mcp_client.py  metrics.py  pyproject.toml  report.py
eval/runners/: base.py  browsernerd_mcp.py  html_screenshot.py  puppeteer_mcp.py  raw_html.py
eval/tasks/: example_tasks.json
evalGemini/: .gitignore  README.md  cli.py  config.py  conversation.py  harness.py  judge.py  mcp_client.py  metrics.py  pyproject.toml  report.py
evalGemini/results/: report.md  results.csv  results.json
evalGemini/results_chrome_devtools/: report.md  results.csv  results.json
evalGemini/results_playwright/: report.md  results.csv  results.json
evalGemini/runners/: __init__.py  base.py  browsernerd_mcp.py  chrome_devtools_mcp.py  html_screenshot.py  playwright_mcp.py  puppeteer_mcp.py  raw_html.py
evalGemini/tasks/: example_tasks.json  navigation_tasks.json  react_tasks.json
mcp-server/: INTEGRATION_TESTS.md  README.md  agents.md  config.example.yaml  config.yaml  coverage  coverage.out  gemini_backuptest.md  go.mod  go.sum  start-chrome-debug.bat
mcp-server/cmd/: agents.md  gemini_backuptest.md
mcp-server/data/: agents.md  sessions.json
mcp-server/docs/: CLAUDE.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_STATUS.md  QUICKSTART_GUIDE.md  VALIDATION_REPORT.md  agents.md  gemini_backuptest.md
(+63 files in other folders)
