[project]
name = "browsernerd-eval"
version = "0.1.0"
description = "Evaluation harness for BrowserNERD MCP vs baselines"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "mcp>=1.1.0",
    "httpx>=0.27.0",
    "playwright>=1.48.0",
    "pydantic>=2.9.0",
    "scipy>=1.14.0",
]

[project.scripts]
browsernerd-eval = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
